<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="250dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="14dp"
        android:text="@string/btnBuscar"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorBranco"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tCondicao"
        tools:text="@string/btnBuscar"/>

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="250dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btnLimpar"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorBranco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBuscar"
        app:layout_constraintTop_toBottomOf="@+id/hCondicao"
        tools:text="@string/btnLimpar" />

    <TextView
        android:id="@+id/tStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/irrigacao"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/status1"
        android:textAlignment="center"
        android:textColor="@color/colorRed"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tStatus"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tMaxima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/tempMaxima"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tStatus" />

    <TextView
        android:id="@+id/tMinima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/tempMinima"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tMaxima" />

    <TextView
        android:id="@+id/tUV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/uv"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tMinima" />

    <TextView
        android:id="@+id/tCondicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/tempo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tUV" />

    <TextView
        android:id="@+id/hMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:hint="@string/tmpMaxima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tMaxima"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <TextView
        android:id="@+id/hMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="24dp"
        android:hint="@string/tmpMinima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tMinima"
        app:layout_constraintTop_toBottomOf="@+id/hMax" />

    <TextView
        android:id="@+id/hUV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:hint="@string/indUv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tUV"
        app:layout_constraintTop_toBottomOf="@+id/hMin" />

    <TextView
        android:id="@+id/hCondicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="24dp"
        android:hint="@string/condicao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tCondicao"
        app:layout_constraintTop_toBottomOf="@+id/hUV" />



</android.support.constraint.ConstraintLayout>